[project]
name = "mysite"
version = "0.1.0"
description = ""
authors = [
    {name = "Евгений Иванов",email = "evgwonavi@vk.com"}
]
#readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django==4.2",
    "djangorestframework==3.14.0",
    "Pillow==10.4.0",
    "asgiref==3.6.0",
    "django-debug-toolbar==4.0.0",
    "django-filter==22.1",
    "pytz==2022.7.1",
    "sqlparse==0.4.2",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
